# mcli

./: .bandit  .editorconfig  .env.example  .env.lsh.example  .env.ml.example  .env.production.example  .env.vault  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  API_DAEMON_INTEGRATION.md  API_INTEGRATION_README.md  AUDIT.md  BACKGROUND_PROCESSING_GUIDE.md  CHANGELOG.md  CI_FIX_RECOMMENDATIONS.md  CLAUDE.md  CLEAN_DECORATORS_GUIDE.md  CRON_MANAGER_README.md  CUSTOM_CLI_WITH_API_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.lsh  EXECUTABLE_BUILD.md  FIXED_ISSUES.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  INVESTIGATION_STATUS.md  LIBRARY_PACKAGING_GUIDE.md  LICENSE  MANIFEST.in  MCLI_MYAI_INTEGRATION.md  Makefile  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROFILING_SUMMARY.md  QUICK_START_SELF_HOSTED.md  README-VISUAL-EDITING.md  README.md  (+89 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECRETS_SETUP.md  SELF_HOSTED_RUNNER_SETUP.md  dependency-review-config.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  docs-links.yml  main_mcli.yml  main_mcli.yml.disabled  ml-pipeline.yml  publish-self-hosted.yml  publish.yml  release.yml  security.yml  test.yml
.streamlit/: config.toml  secrets.toml  secrets_from_lsh.toml
client/myAi/: debug_vector_store_crud.sh
demo_output/: politician_trading_1758612081.jsonl
docker/: Dockerfile.ml
docs/: ARCHITECTURE_COMPARISON.md  CHANGELOG.md  CLEAN_COMMAND_ENHANCEMENT.md  COMMAND_CONSOLIDATION.md  COMMAND_MIGRATION_GUIDE.md  CONDITIONAL_IMPORTS_PLAN.md  CONTRIBUTING.md  CORPORATE_REGISTRY_SCRAPERS.md  CORPORATE_SCRAPERS_SUMMARY.md  COVERAGE_IMPROVEMENT_PLAN.md  DEPENDENCY_REFACTORING_PLAN.md  DEPLOYMENT_GUIDE_COMPLETE.md  DEPLOYMENT_STATUS.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  MIGRATION_GUIDE_V8.md  MIGRATION_POLITICIAN_TRADING.md  PENTEST_QUICK_START.md  PENTEST_WORKFLOW.md  PORTABLE_COMMANDS_GUIDE.md  PUBLIC_MODEL_SERVICE_SETUP.md  QUICK_START_AIDER.md  README_MODEL_SERVICE.md  ROUTER_NGINX_SETUP.md  ROUTER_SSL_SETUP.md  SCOPE_MIGRATION_PLAN.md  SCOPE_REDUCTION_SUMMARY.md  SCRIPT_SYNC_SYSTEM.md  SDK.md  SECRETS_DEPLOYMENT.md  SECRETS_MANAGEMENT.md  STREAMLIT_MIGRATION_PLAN.md  STREAMLIT_MIGRATION_SUMMARY.md  TECHNICAL_DEBT_POLICY.md  TODO_CATALOG.md  TRADING_DASHBOARD_GUIDE.md  VISUALIZATION_FEATURES.md  custom-commands.md  dashboard_fixes.md  dashboard_makefile_usage.md  (+8 more)
docs/architecture/: ARCHITECTURE.md  FASTAPI_MIGRATION.md  STORAGE_ABSTRACTION.md
docs/archive/: IMPLEMENTATION_AND_TESTING_STATUS.md  PHASE_2_READY.md  PR_107_FIXES_SUMMARY.md  PR_DESCRIPTION.md
docs/bug-reports/: BUG_REPORT_politician_names.md
docs/commands/: ci.md
docs/configuration/: mcli.toml.example
docs/debugging/: supabase_connection_fix.md
docs/deployment/: AZURE-DEPLOYMENT.md
docs/development/: CHECKPOINT_politician_names_fix.md  LINTING.md  TESTING.md
docs/examples/: README.md  enhanced_clean_command.py
docs/features/: FILE_PATH_COMPLETION.md  FOLDER_WORKFLOWS.md  FUZZY_FINDING.md  GRAVITY_VIZ_README.md  LOCAL_VS_GLOBAL_COMMANDS.md  OPENAI_ADAPTER_IMPLEMENTATION.md  REPO_CLEANUP.md  SHELL_COMMANDS.md  SHELL_COMPLETION.md
docs/guides/: DASHBOARD.md  OPTIONAL_DEPENDENCIES.md  REPO_CLEANUP_GUIDE.md  SHELL_WORKFLOWS.md  STREAMLIT_DEPLOYMENT_GUIDE.md
docs/releases/: 0.8.4.md  0.8.5.md  7.0.5.md  7.0.6.md  7.1.0.md  7.1.1.md  7.1.2.md  7.1.3.md  7.10.0.md  7.10.1.md  7.10.2.md  7.10.3.md  7.11.0.md  7.11.1.md  7.11.2.md  7.11.3.md  7.11.4.md  7.12.0.md  7.12.1.md  7.12.2.md  7.14.0.md  7.14.2.md  7.14.3.md  7.14.4.md  7.14.5.md  7.15.0.md  7.16.0.md  7.16.1.md  7.16.2.md  7.17.0.md  7.19.0.md  7.19.10.md  7.19.11.md  7.19.12.md  7.19.13.md  7.19.14.md  7.19.15.md  7.19.16.md  7.19.2.md  7.19.3.md  (+38 more)
docs/setup/: INSTALL.md  README-MONACO-SETUP.md  STREAMLIT_CLOUD_TROUBLESHOOTING.md  STREAMLIT_DEPLOYMENT.md
examples/: .pypirc.template  README.md  alembic.ini  demo_enhanced_chat.py  demo_library_usage.py  demo_lsh_to_mcli.py  demo_scheduler.py  fly.lsh.toml
models/: politician_trading_model_20251006_070132.json  politician_trading_model_20251006_071933.json  politician_trading_model_20251006_072002.json
nginx/: model.mcli.info-minimal.conf  model.mcli.info.conf
resources/: README.md
scripts/: README.md  build-and-publish.sh  build_rust.py  check_supabase_schema.py  deploy_lsh.sh  distribute_secrets.py  entrypoint.sh  mcli_executable.py  migrate_features.py  publish.py  restart_dashboard.sh  run_integration_tests.sh  run_migration.py  setup-self-hosted-runner.sh  setup_public_model_service.sh  streamlit-export-secrets.sh  streamlit_app.py  test_corporate_scrapers.py  test_dashboard_data.py  test_deployment.sh  test_pages_import.py  test_supabase_connection.py  validate_phase1.sh  verify_lsh_tables.py  verify_streamlit_deployment.py
supabase/: .env.example  config.toml
test-results/: .last-run.json
test-vector-store/: vector_store.db
test_integration/: integration_test_report.json
test_output/: test_processed_data.jsonl
tests/: README.md  README_CLI_TESTS.md  TEST_CATEGORIZATION.md  conftest.py  demo_generate_graph.py  run_tests.py  test_all_cli.py  test_auth.py  test_daemon.py  test_erd_import.py  test_file.py  test_fixed_issues.py  test_gcloud.py  test_generate_graph.py  test_graph_data.json  test_lib.py  test_main_app.py  test_makefile.sh  test_makefile_full.sh  test_oi.py  test_pyinstaller.sh  test_registry.py  test_repo.py  test_rich.py  test_self.py  test_uv_compatibility.py  test_videos.py  test_wakatime.py  test_webapp.py  test_webapp_comprehensive.py  test_workflow.py  test_workflow_integration.py
tools/: lint_hardcoded_strings.py  linter_config.py  validate_doc_links.py  validate_docs.py  validate_test_structure.py
vscode-extension/: .vscodeignore  CHANGELOG.md  INSTALL.md  LICENSE.txt  MARKETPLACE-READY.md  MARKETPLACE_SUBMISSION.md  PUBLISHING.md  README.md  TROUBLESHOOTING.md  TUTORIAL_VIDEO_OUTLINE.md  mcli-framework-1.0.0.vsix  mcli-workflow-notebooks-1.0.0.vsix  package-lock.json  package.json  tsconfig.json  webpack.config.js
(+580 files in other folders)
