[project]
name = "mcli-framework"
version = "8.0.45"
description = "Portable workflow framework - transform any script into a versioned, schedulable command. Store in ~/.mcli/workflows/, version with lockfile, run as daemon or cron job."
readme = "README.md"
 requires-python = ">=3.10"
authors = [{ name = "Luis Fernandez de la Vara", email = "luis@lefv.io" }]
maintainers = [{ name = "Luis Fernandez de la Vara", email = "luis@lefv.io" }]
license = { text = "MIT" }
keywords = [
  "cli", "command-line", "framework", "workflow", "automation", "rust", "performance",
  "visual", "tui", "terminal", "ai", "productivity"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Shells",
  "Topic :: System :: Systems Administration",
  "Topic :: Terminals",
  "Topic :: Utilities",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  # Core CLI dependencies
  "click>=8.1.7,<9.0.0",
  "rich>=14.0.0,<15.0.0",
  "requests>=2.31.0,<3.0.0",
  "tomli>=2.2.1,<3.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "pydantic-settings>=2.0.0,<3.0.0",
  # Core utilities
  "watchdog>=3.0.0,<4.0.0",
  "tqdm>=4.66.1,<5.0.0",
  "humanize>=4.9.0,<5.0.0",
  "psutil>=5.9.0,<6.0.0",
  "inquirerpy>=0.3.4,<0.4.0",
  "gitpython>=3.1.40,<4.0.0",
  "prompt-toolkit>=3.0.0,<4.0.0",
  # Basic HTTP/async support
  "aiohttp>=3.13.3,<4.0.0",  # CVE-2025-69223 through CVE-2025-69230 fixes
  "httpx>=0.28.1,<1.0.0",
  "websockets>=12.0,<14.0.0",
  # Data parsing
  "beautifulsoup4>=4.13.5,<5.0.0",
  "fuzzywuzzy>=0.18.0,<1.0.0",
  # Chat and AI capabilities
  "openai>=1.3.0,<2.0.0",
  "anthropic>=0.60.0,<1.0.0",
  "ollama>=0.5.3,<1.0.0",
  "ipython>=8.12.0,<9.0.0",
  # Enhanced async/performance features
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn>=0.27.0,<1.0.0",
  "uvloop>=0.19.0,<1.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "redis>=5.0.0,<6.0.0",
  "aiohttp-sse-client>=0.2.1,<1.0.0",
  "aiomqtt>=2.0.0,<3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/gwicho38/mcli"
"Repository" = "https://github.com/gwicho38/mcli"
"Documentation" = "https://github.com/gwicho38/mcli#readme"
"Issues" = "https://github.com/gwicho38/mcli/issues"
"Changelog" = "https://github.com/gwicho38/mcli/releases"
"Source" = "https://github.com/gwicho38/mcli"

[project.optional-dependencies]
# Development tools
dev = [
  # Testing framework
  "pytest>=8.4.1",
  "pytest-cov>=4.1.0,<5.0.0",
  "pytest-mock>=3.14.1",
  "pytest-asyncio>=1.1.0",
  "pytest-benchmark>=4.0.0",      # Performance testing
  "pytest-timeout>=2.2.0",        # Timeout control
  "pytest-xdist>=3.5.0",          # Parallel testing
  "hypothesis>=6.92.0",           # Property-based testing
  "faker>=22.0.0",                # Test data generation
  "responses>=0.24.0",            # HTTP mocking
  "freezegun>=1.4.0",             # Time mocking
  "pytest-html>=4.1.0",           # HTML reports
  "pytest-json-report>=1.5.0",   # JSON reports

  # Code quality
  "black>=25.0.0,<26.0.0",  # Pin to 25.x to match lockfile, avoid 26.x formatting changes
  "isort>=5.12.0,<6.0.0",
  "mypy>=1.7.1,<2.0.0",
  "ruff>=0.1.0",                  # Fast linter
  "pre-commit>=4.5.1",            # Git hooks

  # Build tools
  "build>=1.2.2.post1",
  "maturin>=1.9.3",
  "twine>=4.0.0",                 # Package upload
]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["mcli"]
known_third_party = [
    "click", "rich", "requests", "tomli", "openai", "anthropic",
    "fastapi", "uvicorn", "uvloop", "aiosqlite", "redis", "watchdog",
    "tqdm", "humanize", "psutil", "ipython", "inquirerpy",
    "gitpython", "maturin", "fuzzywuzzy", "ollama", "pytest",
    "httpx", "aiohttp", "beautifulsoup4", "python-dotenv"
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
# Basic mypy configuration - relaxed for gradual adoption
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true
disable_error_code = [
    "import-untyped",
    "no-untyped-def",
    "var-annotated",
    "attr-defined",
    "assignment",
    "misc",
    "truthy-function",
    "arg-type",
    "return-value",
    "call-arg",
    "union-attr",
    "name-defined",
    "operator",
    "index",
    "type-arg",
    "override",
    "no-any-return",
    "has-type",
    "valid-type",
    "type-var",
    "dict-item",
    "call-overload",
    "no-redef",
    "abstract",
    "list-item",
]

# Module discovery
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
follow_imports = "normal"
follow_imports_for_stubs = true

# Output
show_error_codes = true
show_column_numbers = true
show_error_context = true
color_output = true
error_summary = true
pretty = true

# Error reporting
show_traceback = true
raise_exceptions = false

# Incremental mode
incremental = true
cache_dir = ".mypy_cache"

# Strict options for core modules (enable gradually)
# disallow_any_unimported = false
# disallow_any_expr = false
# disallow_any_decorated = false
# disallow_any_explicit = false
# disallow_subclassing_any = false
# strict_optional = true
# warn_incomplete_stub = true

# Per-module options - enable strict checking for core modules first
# Type checking can be enabled gradually per-module
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "scripts.*",
    "docs.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "mcli.workflow.openai.*",
    "mcli.workflow.anthropic.*",
    "mcli.lib.performance.*",
]
warn_return_any = false
ignore_errors = false

# Core modules - enable stricter type checking
[[tool.mypy.overrides]]
module = [
    "mcli.app.*",
    "mcli.lib.*",
]
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
# NOTE: This is the primary dev dependency specification (PEP 735).
# [project.optional-dependencies] dev is kept for pip compatibility.
dev = [
    "black>=25.0.0,<26.0.0",  # Pin to 25.x to match lockfile
    "isort>=5.13.2",
    "mypy>=1.16.1",
    "pylint>=3.0.0",
    "pytest>=8.4.1",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=24.1.0",
    "flake8-comprehensions>=3.14.0",
    "flake8-simplify>=0.21.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true

[tool.setuptools.exclude-package-data]
mcli = ["**/tests/**/*", "**/__pycache__/**/*"]

[tool.coverage.run]
source = ["src/mcli"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
    "*/.*",
    "setup.py",
    "*/migrations/*",
    "*/static/*",
    "*/templates/*",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
precision = 2
skip_covered = false
skip_empty = false
# Fail if coverage is below threshold
fail_under = 50.0

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/mcli",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--cov-fail-under=50",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "cli: marks tests as CLI tests",
    "asyncio: marks tests as async tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
]

[project.scripts]
mcli = "mcli.app.main:main"

[tool.bandit]
# Skip these test IDs - acceptable in this CLI tool context
skips = [
    "B101",  # assert - acceptable in CLI tool
    "B102",  # exec_used - required for dynamic command loading
    "B104",  # hardcoded_bind_all_interfaces - dev servers
    "B108",  # hardcoded_tmp_directory - acceptable usage
    "B113",  # request_without_timeout - handled by app logic
    "B301",  # pickle - used for trusted internal caching
    "B306",  # mktemp - acceptable temp file creation
    "B310",  # urllib_urlopen - required for remote functionality
    "B324",  # hashlib_md5 - non-security fingerprinting
    "B404",  # import_subprocess - required for CLI tool
    "B602",  # subprocess_popen_with_shell_equals_true - required for user commands
    "B603",  # subprocess_without_shell_equals_true - controlled usage
    "B604",  # any_other_function_with_shell_equals_true - false positives
    "B605",  # start_process_with_a_shell - controlled usage
    "B607",  # start_process_with_partial_path - acceptable for CLI
]
exclude_dirs = [
    ".venv",
    "venv",
    "build",
    "dist",
    ".tox",
    ".pytest_cache",
    "tests",
    "docs",
    "scripts",
    ".git",
    "__pycache__",
]
